Armon is literally smarter than everyone else

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Projects</a>
-                    <div class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink">
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="https://ieapplekamp.github.io/Unit-4-Game/" target="_blank">Math game I can't remember</a>
                         <a class="dropdown-item" href="https://ieapplekamp.github.io/GifTastic/" target="_blank">Find 15 gifs because google is too overwhelming</a>
                         <a class="dropdown-item" href="https://ieapplekamp.github.io/TriviaGame/" target="_blank">Trivia Game I need to make look nicer</a>
@@ -46,9 +46,7 @@
             </ul>
         </div>
     </nav>
-    <div>
-        
-    </div>
+
     <svg id="particles-js" viewBox="0 0 960 700">
         <symbol id="s-text">
             <text text-anchor="middle" x="50%" y="50%">Hey Bitch</text>
