--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link rel="stylesheet" type="text/css" href="Assets/Css/reset.css">
     <link rel="stylesheet" type="text/css" href="Assets/Css/styles.css">
 
@@ -17,17 +18,21 @@
 </head>
 <body>
     <!-- Header Section / Fancy Text -->
-    <header id="particles-js" class="header d-flex justify-content-center ">
+    <header id="particles-js" class="header d-flex justify-content-center">
 
         <div class="d-flex align-items-center">
             <div class='header-wrapper d-flex justify-content-center text-center'>
-                <div class="d-flex align-items-center text-center">
-                    Hi, my names Ian
+                <div class="d-flex align-items-center text-center row">
+                    <div class="header-text col-12 animated fadeInDown delay-1s"> <!-- For Text -->
+                    <p>Hi, my name's Ian,
                     <br>
-                    And my life, is kinda crazy
-                    <div>
-                        <a class="nav-link" href="https://github.com/Ieapplekamp" target="_blank"><i class="fab fa-github-square" title="GitHub"></i></a>
-                        <a class="nav-link" href="https://www.linkedin.com/in/ian-applekamp-316256186/" target="_blank"><i class="fab fa-linkedin" title="LinkedIn"></i></a>
+                    And I make things</p>
+                    </div>
+                    <div class="header-icons col-12 animated fadeInDown delay-2s">
+                        <a class="" href="https://github.com/Ieapplekamp" target="_blank"><i class="fab fa-github-square" title="GitHub"></i></a>
+                        <a class="" href="https://www.linkedin.com/in/ian-applekamp-316256186/" target="_blank"><i class="fab fa-linkedin" title="LinkedIn"></i></a>
+                        <a class="" href="# CONTACT"><i class="fas fa-address-card"></i></a>    <!-- This link about needs to be set to a contact sections -->
+                        <a class="" href="#about-section"><i class="fas fa-chevron-circle-down animated swing delay-5s infinite "></i></a>
                     </div>
                 </div>
             </div>
@@ -63,10 +68,10 @@
                     <a class="nav-link" href="#"><i class="fas fa-home"></i><span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://github.com/Ieapplekamp" target="_blank"><i class="fab fa-github-square" title="GitHub"></i></a>
+                    <a class="nav-link" href="#about-section">About Me</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://www.linkedin.com/in/ian-applekamp-316256186/" target="_blank"><i class="fab fa-linkedin" title="LinkedIn"></i></a>
+                    <a class="nav-link" href="#">Contact</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Projects  </a>
