--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class='header-wrapper d-flex justify-content-center text-center'>
                 <div class="d-flex align-items-center text-center row">
                     <div class="header-text col-12 animated fadeInDown delay-1s"> <!-- For Text -->
-                    <p>Hi, my name's Ian,
+                    <p>Hi, my name's <span style="color:#0073DC;">Ian</span>,
                     <br>
                     And I make things</p>
                     </div>
@@ -155,8 +155,7 @@
         </div>
     </section>
     
-<!-- p5.js -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
+
 <!-- Bootstrap -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 
@@ -166,7 +165,6 @@
 <!-- jQuery -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <!-- Mine -->
-<script src="Assets/Javascript/sketch.js" type="text/javascript"></script>
 <script src="Assets/Javascript/app.js" type="text/javascript"></script> 
 </body>
 </html>
