--- a/index.html
+++ b/index.html
@@ -93,19 +93,19 @@
     <section id="particles-js2">
         <div id="about-section" >
             
-            <div class="container">
+            <div class="container test"> <!---->
                 
-                    <div class="row">
+                    <div class="row"> <!---->
 
-                        <div class="col col-4 ">
-                            <div id="" class="text-center">
+                        <div class="col col-4 "> <!-- -->
+                            <div id="" class="text-center ">
                                 <img src="./Assets/Images/me_feb_2018.jpg" alt="Ya Girl" class="rounded">
                                 <div class="about-me">
-                                    <span><i class="fas fa-at mr-2"></i></span>
+                                    <span><i class="fas fa-envelope mr-3"></i></span>
                                     <div class="">ieapplekamp@gmail.com</div>
                                 </div>
                                 <div class="about-me">
-                                    <span><i class="fas fa-map-marker-alt mr-2"></i></span>
+                                    <span><i class="fas fa-map-marker-alt mr-3"></i></span>
                                     <div class="">Fuquay-Varina, NC</div>
                                 </div>
                             </div>
@@ -114,7 +114,7 @@
                         <div class="col col-8">
 
                             <div class="about-me">
-                                <span class="ml-2"><i class="fas fa-info mr-5"></i></span>
+                                <span class=""><i class="fas fa-info-circle mr-5"></i></span>
                                 <div class="ml-2">
                                     <p>
                                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta debitis libero cum quam rerum beatae facilis odio quaerat a quia atque fuga quo, cupiditate natus dolorum laboriosam ipsa autem maxime. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni dolor, sunt impedit ullam earum culpa ut non totam deserunt amet exercitationem beatae provident porro alias, aperiam eligendi repellat necessitatibus voluptatibus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, modi cupiditate. Nemo delectus neque aliquid reiciendis illo doloremque non qui autem, repellendus nisi,
