adjusted some colors

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                             </div>
 
                             <div class="about-me col-7">
-                                <span><i class="fas fa-pizza-slice mr-5"></i></span>
+                                <span><i class="fab fa-keybase mr-5"></i></span>
                                 <div class="">
                                     <ul class="">
                                         <li><span class="heading" style="color:#0073DC;">Hobbies:</span> I'm not sure I have any? Eating, Sleeping, World Destruction</li>
