changed colors and adjusted padding

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class='header-wrapper d-flex justify-content-center text-center'>
                 <div class="d-flex align-items-center text-center row">
                     <div class="header-text col-12 animated fadeInDown delay-1s"> <!-- For Text -->
-                    <p>Hi, my name's <span style="color:#0073DC;">Ian</span>,
+                    <p>Hi, my name's <span style="color:#ff4681;">Ian</span>,
                     <br>
                     And I make things</p>
                     </div>
@@ -33,7 +33,7 @@
                         <a class="" href="https://github.com/Ieapplekamp" target="_blank"><i class="fab fa-github-square" title="GitHub"></i></a>
                         <a class="" href="https://www.linkedin.com/in/ian-applekamp-316256186/" target="_blank"><i class="fab fa-linkedin" title="LinkedIn"></i></a>
                         <a class="" href="# CONTACT"><i class="fas fa-address-card"></i></a>    <!-- This link about needs to be set to a contact sections -->
-                        <a class="" href="#about-section"><i class="fas fa-chevron-circle-down animated swing delay-5s infinite "></i></a>
+                        <a class="" href="#about-section"><i class="fas fa-chevron-circle-down animated swing delay-5s infinite" style="color:#ff4681;"></i></a>
                     </div>
                 </div>
             </div>
@@ -130,10 +130,10 @@
                                 <span><i class="fas fa-code mr-5"></i></span>
                                 <div class="">
                                     <ul class="">
-                                        <li><span class="heading" style="color:#0073DC;">Languages:</span> HTML5, CSS, JavaScript</li>
-                                        <li><span class="heading" style="color:#0073DC;">Libraries:</span> jQuery, Bootstrap, Particles</li>
-                                        <li><span class="heading" style="color:#0073DC;">Back-End:</span> MySQL, Firebase</li>
-                                        <li><span class="heading" style="color:#0073DC;">Other Technologies:</span> Node.JS</li>
+                                        <li><span class="heading" style="color:#ff4681;">Languages:</span> HTML5, CSS, JavaScript</li>
+                                        <li><span class="heading" style="color:#ff4681;">Libraries:</span> jQuery, Bootstrap, Particles</li>
+                                        <li><span class="heading" style="color:#ff4681;">Back-End:</span> MySQL, Firebase</li>
+                                        <li><span class="heading" style="color:#ff4681;">Other Technologies:</span> Node.JS</li>
                                     </ul>
                                 </div>
                                 
@@ -143,7 +143,7 @@
                                 <span><i class="fab fa-keybase mr-5"></i></span>
                                 <div class="">
                                     <ul class="">
-                                        <li><span class="heading" style="color:#0073DC;">Hobbies:</span> I'm not sure I have any? Eating, Sleeping, World Destruction</li>
+                                        <li><span class="heading" style="color:#ff4681;">Hobbies:</span> I'm not sure I have any? Eating, Sleeping, World Destruction</li>
                                     </ul>
                                 </div>
                                 
