--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
             <div class='header-wrapper d-flex justify-content-center text-center'>
                 <div class="d-flex align-items-center text-center row">
                     <div class="header-text col-12 animated fadeInUp delay-1s"> <!-- For Text -->
-                    <p>Hi, my name's <a href="#about-section" style="color:#ff4681;"><p class="animated delay-5s pulse slow infinite" >Ian</p></a>
-                    and I make things</p>
+                    <p>Hi, my name's <span style="color:#ff4681;">Ian</span>,<br>
+                    and I'm a Web Developer.</p>
                     </div>
-                    <div class="header-icons col-12 animated fadeInDown delay-2s">
+                    <div class="header-icons col-12 animated fadeInDown slow delay-3s">
                         <a class="" href="https://github.com/Ieapplekamp" target="_blank"><i class="fab fa-github-square" title="GitHub"></i></a>
                         <a class="" href="https://www.linkedin.com/in/ian-applekamp-316256186/" target="_blank"><i class="fab fa-linkedin" title="LinkedIn"></i></a>
                         <a class="" href="# CONTACT"><i class="fas fa-address-card"></i></a>    <!-- This link about needs to be set to a contact sections -->
-                        <a class="" href="#about-section"><i class="fas fa-chevron-circle-down animated swing delay-5s infinite" style="color:#ff4681;"></i></a>
+                        <a class="" href="#about-section"><i class="fas fa-chevron-circle-down animated swing slower delay-5s infinite" style="color:#ff4681;"></i></a>
                     </div>
                 </div>
             </div>
@@ -95,6 +95,7 @@
             <div class="container test"> 
                 
                     <div class="row"> 
+
                         <div class="col col-4"> 
                             <div id="" class="text-center">
                                 <img src="./Assets/Images/me_feb_2018.jpg" alt="Ya Girl" class="rounded">
@@ -104,7 +105,7 @@
                                 </div>
                                 <div class="about-me">
                                     <span><i class="fas fa-map-marker-alt mr-3"></i></span>
-                                    <div class="">Fuquay-Varina, NC</div>
+                                    <div class="">Raleigh, NC</div>
                                 </div>
                             </div>
                         </div>
@@ -148,7 +149,6 @@
                     </div>
                 
             </div>
-
         </div>
 
     </section> 
