--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="d-flex align-items-center">
             <div class='header-wrapper d-flex justify-content-center text-center'>
                 <div class="d-flex align-items-center text-center row">
-                    <div class="header-text col-12 animated fadeInUp delay-1s"> <!-- For Text -->
+                    <div class="header-text col-12 animated fadeInDown slow delay-1s"> <!-- For Text -->
                     <p>Hi, my name's <span style="color:#ff4681;">Ian</span>,<br>
                     and I'm a Web Developer.</p>
                     </div>
@@ -116,10 +116,11 @@
                                 <span class=""><i class="fas fa-info-circle mr-5"></i></span>
                                 <div class="ml-2">
                                     <p>
-                                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta debitis libero cum quam rerum beatae facilis odio quaerat a quia atque fuga quo, cupiditate natus dolorum laboriosam ipsa autem maxime. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni dolor, sunt impedit ullam earum culpa ut non totam deserunt amet exercitationem beatae provident porro alias, aperiam eligendi repellat necessitatibus voluptatibus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, modi cupiditate. Nemo delectus neque aliquid reiciendis illo doloremque non qui autem, repellendus nisi,
-                                    </p>
+                                        Thanks you for visiting my "portfolio". I hope we've figure out my name by this point. I'm 23, from the southern part of Wisconsin.</p>
                                     <p>
-                                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta debitis libero cum quam rerum beatae facilis odio quaerat a quia atque fuga quo, cupiditate natus dolorum laboriosam ipsa autem maxime. Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                                        This mess here currently under construction... I have no prior experience in any sort of web development, UI design, or illustration. I've worked food service for the last 6 years, particularly as a "certified" barista and I'm really hoping to go further than general manager of a restaurant or coffee roaster; I mean at least an actual living wage and health insurance would suffice.   
+                                    </p>
+                                        maLorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta debitis libero cum quam rerum beatae facilis odio quaerat a quia atque fuga quo, cupiditate natus dolorum laboriosam ipsa autem maxime. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni dolor, sunt impedit ullam earum culpa ut non totam deserunt amet exercitationem beatae provident porro alias, aperiam eligendi repellat necessitatibus voluptatibus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, modi cupiditate. Nemo delectus neque aliquid reiciendis illo doloremque non qui autem, repellendus nisi,
                                     </p>
                                 </div>
                             </div>
@@ -140,7 +141,7 @@
                                 <span><i class="fab fa-keybase mr-5"></i></span>
                                 <div class="">
                                     <ul class="">
-                                        <li><span class="heading" style="color:#ff4681;">Hobbies:</span> I'm not sure I have any? Eating, Sleeping, World Destruction</li>
+                                        <li><span class="heading" style="color:#ff4681;">Hobbies:</span> I'm not sure I have any? Eating, Sleeping, choas</li>
                                     </ul>
                                 </div>
                             </div>
