--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
                         <div class="col col-4 mt-5"> 
                             <div class="text-center">
-                                <img src="./Assets/Images/me_feb_2018.jpg" alt="Ya Girl" class="rounded">
+                                <img src="./Assets/Images/me_feb_2018.jpg" alt="Ya Girl" class="rounded" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                                 <div class="about-me" data-aos="fade-up"
                                 data-aos-anchor-placement="top-bottom">
                                     <span><i class="fas fa-envelope mr-3"></i></span>
