--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
             </ol>
             <div class="carousel-inner" role="listbox">
                 <!-- Slide One -->
@@ -262,7 +263,30 @@
                             <div class="container mt-4">
                                 <div class="d-flex justify-content-between">
                                     <a href="https://github.com/Ieapplekamp/FriendFinder" target="_blank"><i class="githubIcons fab fa-github-alt"></i></a>
-                                    <p >Check out the code!</p>
+                                    <p class="mr-4">Check out the code!</p>
+                                    <a href="https://github.com/Ieapplekamp/Bamazon" target="_blank"><i class="githubIcons fab fa-github-alt"></i></a>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <!-- Slide Five -->
+                <div class="carousel-item">
+                    <div class="row pl-2">
+                        <div class="row ml-3">
+                            <iframe id="inlineFrameExample" class="rounded"
+                                width="625"
+                                height="525"
+                                src="https://lit-brook-68426.herokuapp.com/">
+                            </iframe>
+
+                            <img id='bamazon' src="./Assets/Images/Screen Shot 2019-11-12 at 9.04.03 PM.png" alt="Bamzon" class="rounded">
+                        
+                            <div class="container mt-4">
+                                <div class="d-flex justify-content-between">
+                                    <a href="https://github.com/Ieapplekamp/Burger" target="_blank"><i class="githubIcons fab fa-github-alt"></i></a>
+                                    <p class="mr-4">Check out the code!</p>
                                     <a href="https://github.com/Ieapplekamp/Bamazon" target="_blank"><i class="githubIcons fab fa-github-alt"></i></a>
                                 </div>
                             </div>
