adjusted particles for performance

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         <div id="about-section">
         
-            <div class="container test" data-aos="fade-up"
+            <div class="container-fluid test" data-aos="fade-up"
             data-aos-anchor-placement="top-bottom"> 
                 
                     <div class="row"> 
