almost full mobile responsive

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
             <div class="container-fluid test" data-aos="fade-up"
             data-aos-anchor-placement="top-bottom"> 
                 
-                    <div class="row"> 
+                    <div class="row newRow"> 
 
-                        <div class="col col-4 mt-5"> 
+                        <div class="col-4 mt-5"> 
                             <div class="text-center">
                                 <img src="./Assets/Images/me_feb_2018.jpg" alt="Ya Girl" class="rounded" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                                 <div class="about-me" data-aos="fade-up"
@@ -113,9 +113,10 @@
                             </div>
                         </div>
 
-                        <div class="col col-8">
+                        <div class="col-8">
 
-                            <div class="about-me">
+                            <div class="about-me" data-aos="fade-up"
+                            data-aos-anchor-placement="top-bottom">
                                 <span><i class="fas fa-info-circle mr-5"></i></span>
                                 <div class="ml-2">
                                     <p>
@@ -136,7 +137,7 @@
                                         <li><span class="heading" style="color:#ff4681;">Languages:</span> HTML5, CSS, JavaScript</li>
                                         <li><span class="heading" style="color:#ff4681;">Libraries:</span> jQuery, Bootstrap, Particles</li>
                                         <li><span class="heading" style="color:#ff4681;">Back-End:</span> MySQL, Firebase, Express</li>
-                                        <li><span class="heading" style="color:#ff4681;">Other Technologies:</span> Node.JS</li>
+                                        <li><span class="heading" style="color:#ff4681;">Other Technologies:</span> Node.JS, Sequelize</li>
                                     </ul>
                                 </div>
                             </div>
