--- a/index.html
+++ b/index.html
@@ -279,7 +279,12 @@
 </script> 
 <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
 <script>
-    new Glide('.glide').mount()
+    const config = {
+        type: "carousel",
+        preview: 1
+    }
+    new Glide('.glide', config).mount()
+    
 </script>
 </body>
 </html>
