--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      <!--Animations  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <!-- Glide (portfolio) -->
-    <!-- <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.core.min.css"> -->
+    <link rel="stylesheet" href="/node_modules/@glidejs/glide/dist/css/glide.core.min.css">
     <!-- Mine -->
     <link rel="stylesheet" type="text/css" href="Assets/Css/reset.css">
     <link rel="stylesheet" type="text/css" href="Assets/Css/styles.css">
