--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
     <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- GlideJS -->
-    <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/glide.min.js"></script>
     <!-- <script src="https://unpkg.com/@glidejs/glide"></script> -->
     <script src="Assets/Javascript/glider.js" type="text/javascript"></script> 
 </body>
