--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Mine -->
     <link rel="stylesheet" type="text/css" href="Assets/Css/reset.css">
     <link rel="stylesheet" type="text/css" href="Assets/Css/styles.css">
-    <link rel="stylesheet" type="text/css" href="Assets/Css/glide.core.min.css">
+    <link rel="stylesheet" href="Assets/Css/glide.core.min.css">
 
     <title>Applekamper</title>
 
