cleaned somethings up

--- a/index.html
+++ b/index.html
@@ -33,23 +33,21 @@
                 <div class="d-flex align-items-center text-center row">
                     <div class="header-text col-12 animated fadeInDown slow delay-1s"> <!-- For Text -->
                         <p>
-                            Hi, my name's 
-                            <span style="color:#ff4681;">Ian</span>
-                            ,<br>and I'm a Web Developer.
+                            Hi, my name's <span class="pink">Ian</span>,<br>and I'm a Web Developer.
                         </p>
                     </div>
                     <div class="header-icons col-12 animated fadeInDown slow delay-3s">
-                        <a class="" href="https://github.com/Ieapplekamp" target="_blank">
+                        <a href="https://github.com/Ieapplekamp" target="_blank">
                             <i class="fab fa-github-square" title="GitHub"></i>
                         </a>
-                        <a class="" href="https://www.linkedin.com/in/ian-applekamp-316256186/" target="_blank">
+                        <a href="https://www.linkedin.com/in/ian-applekamp-316256186/" target="_blank">
                             <i class="fab fa-linkedin" title="LinkedIn"></i>
                         </a>
-                        <a class="" href="# CONTACT">
+                        <a href="# CONTACT"> <!-- This link about needs to be set to a contact sections -->
                             <i class="fas fa-address-card"></i>
-                        </a>    <!-- This link about needs to be set to a contact sections -->
-                        <a class="" href="#about-section">
-                            <i class="fas fa-chevron-circle-down animated swing slower delay-5s infinite" style="color:#ff4681;"></i>
+                        </a>    
+                        <a href="#about-section">
+                            <i class="fas fa-chevron-circle-down animated swing slower delay-5s infinite" style="color: #ff4681;"></i>
                         </a>
                     </div>
                 </div>
@@ -75,7 +73,6 @@
             </g>
         </svg>
         
-        <!-- <a class="navbar-brand" href="#">Ian Applekamp</a> -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -97,11 +94,11 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Projects</a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="https://ieapplekamp.github.io/Word-Press-Game/" target="_blank">First game I ever made, that statement speaks for itself</a>
-                        <a class="dropdown-item" href="https://ieapplekamp.github.io/Unit-4-Game/" target="_blank">Game the probably needs the least amount of work</a>
-                        <a class="dropdown-item" href="https://ieapplekamp.github.io/GifTastic/" target="_blank">Find 15 gifs because google is too overwhelming</a>
-                        <a class="dropdown-item" href="https://ieapplekamp.github.io/TriviaGame/" target="_blank">Trivia Game I need to make look nicer</a>
-                        <a class="dropdown-item" href="https://ieapplekamp.github.io/Train-Scheduler/" target="_blank">Calculate your schedule, because you can't read a clock</a>
+                        <a class="dropdown-item" href="https://ieapplekamp.github.io/Word-Press-Game/" target="_blank">Hangman</a>
+                        <a class="dropdown-item" href="https://ieapplekamp.github.io/Unit-4-Game/" target="_blank">(MATH-M)-Mathematics</a>
+                        <a class="dropdown-item" href="https://ieapplekamp.github.io/GifTastic/" target="_blank">Giphy</a>
+                        <a class="dropdown-item" href="https://ieapplekamp.github.io/TriviaGame/" target="_blank">Trivia</a>
+                        <a class="dropdown-item" href="https://ieapplekamp.github.io/Train-Scheduler/" target="_blank">Train Scheduler</a>
                     </div>
                 </li>
             </ul>
@@ -125,7 +122,7 @@
                                 <div class="about-me" data-aos="fade-up"
                                 data-aos-anchor-placement="top-bottom">
                                     <span><i class="fas fa-envelope mr-3"></i></span>
-                                    <div class="">ieapplekamp@gmail.com</div>
+                                    <div>ieapplekamp@gmail.com</div>
                                 </div>
                                 <div class="about-me" data-aos="fade-up"
                                 data-aos-anchor-placement="top-bottom">
@@ -142,7 +139,7 @@
                                 <span><i class="fas fa-info-circle mr-5"></i></span>
                                 <div class="ml-2">
                                     <p>
-                                        Thanks you for visiting my "portfolio". I hope we've figure out my name by this point. I'm 23, from the southern part of Wisconsin.</p>
+                                        Thank you for visiting my "portfolio". I hope we've figure out my name by now, if not just go ahead and call me En. I'm 23, from the southern part of Wisconsin.</p>
                                     <p>
                                         This mess here currently under construction... I have no prior experience in any sort of web development, UI design, or illustration. I've worked food service for the last 6 years, particularly as a "certified" barista and I'm really hoping to go further than general manager of a restaurant or coffee roaster; I mean at least an actual living wage and health insurance would suffice.   
                                     </p>
@@ -156,10 +153,10 @@
                                 <span><i class="fas fa-code mr-5"></i></span>
                                 <div>
                                     <ul>
-                                        <li><span class="heading" style="color:#ff4681;">Languages:</span> HTML5, CSS, JavaScript</li>
-                                        <li><span class="heading" style="color:#ff4681;">Libraries:</span> jQuery, Bootstrap, Particles</li>
-                                        <li><span class="heading" style="color:#ff4681;">Back-End:</span> MySQL, Firebase, Express</li>
-                                        <li><span class="heading" style="color:#ff4681;">Other Technologies:</span> Node.JS, Sequelize</li>
+                                        <li><span class="heading pink">Languages:</span> HTML5, CSS, JavaScript</li>
+                                        <li><span class="heading pink">Libraries:</span> jQuery, Bootstrap, Particles</li>
+                                        <li><span class="heading pink">Back-End:</span> MySQL, Firebase, Express</li>
+                                        <li><span class="heading pink">Other Technologies:</span> Node.JS, Sequelize</li>
                                     </ul>
                                 </div>
                             </div>
@@ -169,7 +166,7 @@
                                 <span><i class="fab fa-keybase mr-5"></i></span>
                                 <div>
                                     <ul>
-                                        <li><span class="heading" style="color:#ff4681;">Hobbies:</span> I'm not sure I have any? Eating, Sleeping, choas</li>
+                                        <li><span class="heading pink">Hobbies:</span> I'm not sure I have any? Eating, Sleeping, choas</li>
                                     </ul>
                                 </div>
                             </div>
@@ -192,7 +189,7 @@
                                             <div class="d-flex justify-content-center">
                                                 <p class="">
                                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod mollitia, laboriosam nihil explicabo optio, iure illum autem eos temporibus aperiam quo nobis fugit harum molestiae ratione, numquam aspernatur consectetur expedita.<br>
-                                                    <a href="https://github.com/seyleigh/Project-2" target="_blank">
+                                                    <a href="https://github.com/Ieapplekamp/Project-2" target="_blank">
                                                         <i class="mt-5 d-flex justify-content-center githubIcons fab fa-github-alt"></i>
                                                     </a>
                                                 </p>
