--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <a class="nav-link" href="#">Contact</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Projects</a>
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Early Projects</a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="https://ieapplekamp.github.io/Word-Press-Game/" target="_blank">Hangman</a>
                         <a class="dropdown-item" href="https://ieapplekamp.github.io/Unit-4-Game/" target="_blank">(MATH-M)-Mathematics</a>
@@ -127,7 +127,7 @@
                                 <div class="about-me" data-aos="fade-up"
                                 data-aos-anchor-placement="top-bottom">
                                     <span><i class="fas fa-map-marker-alt mr-3"></i></span>
-                                    <div >Raleigh, NC</div>
+                                    <div>Raleigh, NC</div>
                                 </div>
                             </div>
                         </div>
@@ -139,11 +139,12 @@
                                 <span><i class="fas fa-info-circle mr-5"></i></span>
                                 <div class="ml-2">
                                     <p>
-                                        Thank you for visiting my "portfolio". I hope we've figure out my name by now, if not just go ahead and call me En. I'm 23, from the southern part of Wisconsin.</p>
+                                        Thank you for visiting my website! I hope we've figure out my name by now, but if not, just go ahead and call me En. I'm 23, from the southern part of Wisconsin.
+                                    </p><br>
                                     <p>
-                                        This mess here currently under construction... I have no prior experience in any sort of web development, UI design, or illustration. I've worked food service for the last 6 years, particularly as a "certified" barista and I'm really hoping to go further than general manager of a restaurant or coffee roaster; I mean at least an actual living wage and health insurance would suffice.   
-                                    </p>
-                                        I'm trying to make a website from scratch that looks clean is rough, like so many little things.. like ask me how well this website scales lmaomaLorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta debitis libero cum quam rerum beatae facilis odio quaerat a quia atque fuga quo, cupiditate natus dolorum laboriosam ipsa autem maxime. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni dolor, sunt impedit ullam earum culpa ut non totam 
+                                        I'm currently a student of the UNC coding bootcamp for full-stack web development, looking to transition my skills into more Front-End UI/UX design, after graduation. My background doesn't include much coding experience, unless editing Myspace and Tumblr layouts in middle school and high school counts. 
+                                    </p><br>
+                                        However, in March of 2019, I decided to quit my job and fully immerse myself into the world of programming. Initially, I believed I could have been a self taught developer... but then I really started to get into JavaScript.. That's when I knew had bitten off more than I could chew. Not looking to give up, I enrolled into a coding bootcamp. Not only to get a better understanding of the languages and concepts, but to go further as a future developer. 
                                     </p>
                                 </div>
                             </div>
@@ -153,10 +154,10 @@
                                 <span><i class="fas fa-code mr-5"></i></span>
                                 <div>
                                     <ul>
-                                        <li><span class="heading pink">Languages:</span> HTML5, CSS, JavaScript</li>
-                                        <li><span class="heading pink">Libraries:</span> jQuery, Bootstrap, Particles</li>
-                                        <li><span class="heading pink">Back-End:</span> MySQL, Firebase, Express</li>
-                                        <li><span class="heading pink">Other Technologies:</span> Node.JS, Sequelize</li>
+                                        <li><span class="heading pink">Languages: </span> HTML5, CSS, JavaScript</li>
+                                        <li><span class="heading pink">Libraries: </span> Bootstrap, jQuery, Particles</li>
+                                        <li><span class="heading pink">Back-End: </span> MySQL, Sequelize, Express</li>
+                                        <li><span class="heading pink">Other Technologies: </span> Node, Firebase, Postman, Handlebars</li>
                                     </ul>
                                 </div>
                             </div>
@@ -166,7 +167,7 @@
                                 <span><i class="fab fa-keybase mr-5"></i></span>
                                 <div>
                                     <ul>
-                                        <li><span class="heading pink">Hobbies:</span> I'm not sure I have any? Eating, Sleeping, choas</li>
+                                        <li><span class="heading pink">Fun Facts:</span> </li>
                                     </ul>
                                 </div>
                             </div>
