minor text updates

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <!-- Glide (portfolio) -->
     <link rel="stylesheet" href="/node_modules/@glidejs/glide/dist/css/glide.core.min.css">
+    <!-- Glider (portfolio real) -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.css">
     <!-- Mine -->
     <link rel="stylesheet" type="text/css" href="Assets/Css/reset.css">
     <link rel="stylesheet" type="text/css" href="Assets/Css/styles.css">
@@ -167,7 +169,7 @@
                                 <span><i class="fab fa-keybase mr-5"></i></span>
                                 <div>
                                     <ul>
-                                        <li><span class="heading pink">Fun Facts:</span> </li>
+                                        <li><span class="heading pink">Fun Facts: </span> I've worked in speciaty coffee for nearly six years and am a "certified" Barista from CCC.</li>
                                     </ul>
                                 </div>
                             </div>
@@ -245,7 +247,7 @@
                             <a class="glide__arrow glide__arrow--left float-left ml-5" data-glide-dir="<"><i class=" fas fa-chevron-circle-left"></i></a>
                             <a class="glide__arrow glide__arrow--right float-right mr-5" data-glide-dir=">"><i class=" fas fa-chevron-circle-right"></i></a>
 
-                            <div class="glide__bullets d-flex justify-content-center" data-glide-el="controls[track]">
+                            <div class="glide__bullets d-flex justify-content-center" data-glide-el="controls[nav]">
                                 <i class="far fa-circle glide__bullet" data-glide-dir="=0"></i>
                                 <i class="far fa-circle glide__bullet" data-glide-dir="=1"></i>
                                 <i class="far fa-circle glide__bullet" data-glide-dir="=2"></i>
