Should be fully responsive

--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
                         <a class="dropdown-item" href="https://ieapplekamp.github.io/GifTastic/" target="_blank">Giphy</a>
                         <a class="dropdown-item" href="https://ieapplekamp.github.io/TriviaGame/" target="_blank">Trivia</a>
                         <a class="dropdown-item" href="https://ieapplekamp.github.io/Train-Scheduler/" target="_blank">Train Scheduler</a>
+                        <a class="dropdown-item" href="https://github.com/ieapplekamp/Bamazon/" target="_blank">Bamazon</a>
+                        <a class="dropdown-item" href="https://github.com/ieapplekamp/LIRI/" target="_blank">LIRI</a>
                     </div>
                 </li>
             </ul>
@@ -123,8 +125,8 @@
                                 <img src="./Assets/Images/me_feb_2018.jpg" alt="Ya Girl" class="rounded" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                                 <div class="about-me" data-aos="fade-up"
                                 data-aos-anchor-placement="top-bottom">
-                                    <span><i class="fas fa-envelope mr-3"></i></span>
-                                    <div>ieapplekamp@gmail.com</div>
+                                    <span><a href="mailto: ieapplekamp@gmail.com" target="_blank"><i class="pink fas fa-envelope mr-3"></i>ieapplekamp@gmail.com</a></span>
+                                    
                                 </div>
                                 <div class="about-me" data-aos="fade-up"
                                 data-aos-anchor-placement="top-bottom">
@@ -183,8 +185,8 @@
                         <div class="glide__track" data-glide-el="track">
                             <ul class="glide__slides" id="options-hoverpause-checkbox">
                                 <li class="glide__slide">
-                                    <div class="row glideCursor">
-                                        <iframe id="inlineFrameExample" class="col-7"
+                                    <div class="row iframe-row glideCursor">
+                                        <iframe id="inlineFrameExample" class="col-7 iframe-col-7"
                                         height="550"
                                         src="https://immense-wave-44279.herokuapp.com/">
                                         </iframe>
@@ -202,7 +204,7 @@
                                 </li>
 
                                 <li class="glide__slide" >
-                                    <div class="row glideCursor">
+                                    <div class="row iframe-row glideCursor">
                                         <iframe id="inlineFrameExample" class="col-7"
                                         height="550"
                                         src="https://lit-brook-68426.herokuapp.com/">
@@ -221,7 +223,7 @@
                                 </li>
 
                                 <li class="glide__slide">
-                                    <div class="row glideCursor">
+                                    <div class="row iframe-row glideCursor">
                                         <iframe id="inlineFrameExample" class="col-7"
                                         height="550"
                                         src="https://glacial-beyond-65720.herokuapp.com/">
